modified winner activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,12 @@
     <string name="image_desc">image_desc</string>
     <string name="image_desc2">image_desc2</string>
     <string name="your_team_won_by">Your team won by:</string>
+    <string name="send_msg">Send </string>
+    <string name="locations">Find Location</string>
+    <string name="Make_call">Call</string>
+    <string name="enter_message">Enter message</string>
+    <string name="search_for_location">search_for_location</string>
+    <string name="search_location">Search</string>
 
 
 </resources>
